Clean up Sonar warnings
This is mostly removal of thrown exceptions which are not possible.

Change-Id: I5c65878f38ebfb2009d399022f861454cd8633d5
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>